# slovak-learning

./: .gitignore  CLAUDE.md  README.md  run.sh
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: cards.py  claude_client.py  config.py  database.py  gemini_client.py  llm.py  main.py  models.py  prompts.py  questions.py  scoring.py  sessions.py  users.py  vocab_extraction.py
backend/tests/: conftest.py  test_api.py  test_concepts.py  test_database.py  test_feedback.py  test_generation_targeting.py  test_input_validation.py  test_learning_context.py  test_llm_client.py  test_llm_errors.py  test_pack_mechanics.py  test_pin.py  test_purchases.py  test_recommendations.py  test_scoring.py  test_sessions.py  test_showcase.py  test_srs.py  test_trade_in.py  test_vocab_extraction.py
docs/design/: Redesign.dc.html
docs/superpowers/plans/: 2026-07-17-backend-scoring-adaptive-cards.md  2026-07-17-frontend-redesign.md
docs/superpowers/specs/: 2026-07-17-learning-loop-and-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApiKeySetup.tsx  BrandedLoader.tsx  ChatMessage.tsx  ConfigSheet.tsx  ConversationMode.tsx  DiacriticsKeyboard.tsx  ErrorBoundary.tsx  FeedbackView.tsx  GrammarMode.tsx  HomeSkeleton.tsx  LoadingDots.tsx  ModeCard.tsx  Navbar.tsx  PinEntry.tsx  PinInput.tsx  ProgressBar.tsx  ScoreBadge.tsx  SessionHeader.tsx  SettingsModal.tsx  SlovakiaMap.tsx  TabBar.tsx  ThemeProvider.tsx  TranslationMode.tsx  (+2 more)
(+51 files in other folders)
